# NeoCompression

./: BUILD_EXECUTABLE.py  INSTALL_WINDOWS.bat  README.md  pyproject.toml  setup.py
neocompression/: __init__.py  __main__.py  cli.py  core.py  gui.py
